--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -65,11 +65,11 @@
   <string name="send_geometry_toolbar_title">שלח גיאומטריה</string>
   <string name="invalid_input_message">קלט לא תקין</string>
   <string name="settings">הגדרות</string>
-  <string name="pref_notifications_vibrate_title">רטט</string>
-  <string name="pref_notifications_ringtone_title">רינגטון</string>
-  <string name="pref_notifications_alerts_only_title">הצג התראות דחופות בלבד</string>
-  <string name="pref_notifications_ringtone_silent_summary">שקט</string>
-  <string name="pref_notifications_header_title">התראות</string>
+  <string name="pref_title_vibrate">רטט</string>
+  <string name="pref_title_ringtone">רינגטון</string>
+  <string name="pref_title_new_message_notifications">התראת הודעה חדשה</string>
+  <string name="pref_ringtone_silent">שקט</string>
+  <string name="pref_header_notifications">התראות</string>
   <string name="alert_notification_summary">התראה</string>
   <string name="alert_notification_text">התראה דחופה חדשה!</string>
   <string name="alert_notification_title">התראה חדשה!</string>
@@ -78,6 +78,7 @@
   <string name="message_notification_title">הודעה חדשה</string>
   <string name="pref_general_summary_template">גרסא %1$s</string>
   <string name="pref_general_about_title">אודות</string>
+  <string name="menu_action_dynamic_layer_title">שכבה דינאמית</string>
   <string-array name="border_styles">
     <item>ללא</item>
     <item>רציף</item>
