--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,6 +162,8 @@
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
   <string name="pref_general_about_title">About</string>
+  <string name="dynamic_layer_edit_title">Dynamic layer edit</string>
+  <string name="toast_two_fingers_text">Use two fingers to pan</string>
 
   <string-array name="border_styles">
     <item>none</item>
