--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,7 @@
   <string name="menu_action_draw_geometry_title">Draw Geometry</string>
   <string name="menu_action_measure_distance_title">Measure Distance</string>
   <string name="draw_action_positive_button" translatable="false">@string/send</string>
+  <string name="menu_action_free_draw_title">Free draw</string>
 
   <!--Send Quadrilateral-->
   <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
@@ -161,6 +162,8 @@
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
   <string name="pref_general_about_title">About</string>
+  <string name="free_draw_title">Free draw</string>
+  <string name="toast_two_fingers_text">Use two fingers to pan</string>
 
   <string-array name="border_styles">
     <item>none</item>
