--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,11 @@
   <string name="send_quadrilateral_latlngpicker3_label">Point 3</string>
   <string name="send_quadrilateral_latlngpicker4_label">Point 4</string>
 
+  <!--Geometries -->
+  <string name="point">Point</string>
+  <string name="polyline">Polyline</string>
+  <string name="polygon">Polygon</string>
+
   <!-- Go to -->
   <string name="menu_action_go_to_location_title">Go To Location</string>
   <string name="dialog_go_to_title">GoTo Dialog</string>
