--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -91,7 +91,7 @@
   <string name="pref_notifications_ringtone_title">רינגטון</string>
   <string name="pref_notifications_ringtone_silent_summary">שקט</string>
   <string name="pref_notifications_header_title">התראות</string>
-  <string name="toast_two_fingers_text">הזז את המפה באמצעות שתי אצבעות</string>
+  <string name="toast_switch_to_pan_text">החלף מצב על מנת לנוע על גבי המפה</string>
   <string name="pref_notifications_alerts_only_title">הצג התראות דחופות בלבד</string>
   <string name="point">נקודה</string>
   <string name="polygon">פוליגון</string>
