Using string resources for layers' drawer menu categories.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,6 +168,10 @@
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
   <string name="pref_general_about_title">About</string>
+  <string name="drawer_layers_category_name_dynamic_layer">Dynamic Layer</string>
+  <string name="drawer_layers_category_name_static_layers">Static Layers</string>
+  <string name="drawer_layers_category_name_bubble_layers">Bubble Layers</string>
+  <string name="drawer_layers_category_name_rasters">Rasters</string>
 
   <string-array name="border_styles">
     <item>none</item>
