--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,10 @@
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
   <string name="pref_general_about_title">About</string>
+  <string name="drawer_layers_category_name_dynamic_layer">Dynamic Layer</string>
+  <string name="drawer_layers_category_name_static_layers">Static Layers</string>
+  <string name="drawer_layers_category_name_bubble_layers">Bubble Layers</string>
+  <string name="drawer_layers_category_name_rasters">Rasters</string>
   <string name="free_draw_title">Free draw</string>
   <string name="toast_switch_to_pan_text">Switch mode to Pan</string>
 
