Refactored AlertDialog builder class to reuse it's logic for creating the new dynamic layer dialog. Added icon next to the dynamic layer category that opens a dialog for creating new dynamic layer and added a callback to its positive button clicking. Domain's part isn't implemented

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -94,4 +94,6 @@
   <string name="drawer_layers_category_name_rasters">רסטרים</string>
   <string name="drawer_layers_category_name_static_layers">שכבות סטטיות</string>
   <string name="remove_dynamic_entity">הסרת יישות</string>
+  <string name="new_dynamic_layer_dialog_message">בחר שם לשכבה</string>
+  <string name="new_dynamic_layer_dialog_title">צור שכבה חדשה</string>
 </resources>
