--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,14 @@
   <string name="drawer_nav_bar_layers_title">Layers</string>
   <string name="drawer_nav_bar_users_title">Users</string>
 
+  <string name="drawer_layers_category_name_dynamic_layer">Dynamic Layers</string>
+  <string name="drawer_layers_category_name_static_layers">Static Layers</string>
+  <string name="drawer_layers_category_name_bubble_layers">Bubble Layers</string>
+  <string name="drawer_layers_category_name_rasters">Rasters</string>
+
+  <string name="new_dynamic_layer_dialog_message">Choose a name for the new dynamic layer</string>
+  <string name="new_dynamic_layer_dialog_title">Create new dynamic layer</string>
+
   <!--General Settings-->
   <string name="pref_header_general">General</string>
   <string name="pref_header_gps" translatable="false">GPS</string>
@@ -169,10 +177,6 @@
   <string name="message_notification_summary">Message</string>
   <string name="message_notification_text">New incoming message</string>
   <string name="pref_general_about_title">About</string>
-  <string name="drawer_layers_category_name_dynamic_layer">Dynamic Layers</string>
-  <string name="drawer_layers_category_name_static_layers">Static Layers</string>
-  <string name="drawer_layers_category_name_bubble_layers">Bubble Layers</string>
-  <string name="drawer_layers_category_name_rasters">Rasters</string>
   <string name="free_draw_title">Free draw</string>
   <string name="toast_switch_to_pan_text">Switch mode to Pan</string>
 
