--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,8 @@
   <string name="dynamic_layer_switch_geometry_warning">You cannot change geometry while editing</string>
   <string name="draw_action_positive_button" translatable="false">@string/send</string>
   <string name="menu_action_free_draw_title">Free draw</string>
+  <string name="dynamic_layer_edit_title">Edit Dynamic Layer</string>
+  <string name="menu_action_timeplay_title">Timeplay</string>
 
   <!--Send Quadrilateral-->
   <string name="send_quadrilateral_action_description">Fill quadrilateral points</string>
@@ -290,5 +292,4 @@
     <item>willing</item>
     <item>witty</item>
   </string-array>
-  <string name="dynamic_layer_edit_title">Edit Dynamic Layer</string>
 </resources>
