--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,6 +186,7 @@
   <string name="dynamic_layer_delete_dialog_title">Delete entity</string>
   <string name="dynamic_layer_delete_dialog_message">Are you sure you want to delete the selected entity?</string>
   <string name="icon_selection_title">Select Icon</string>
+  <string name="search">Search</string>
 
   <string-array name="border_styles">
     <item>none</item>
