Opens delete entity alert dialog on entity selection in dynamic layer edit mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,8 @@
   <string name="free_draw_title">Free draw</string>
   <string name="toast_switch_to_pan_text">Switch mode to Pan</string>
   <string name="default_timeplay_date_string" translatable="false">-</string>
+  <string name="dynamic_layer_delete_dialog_title">Delete entity</string>
+  <string name="dynamic_layer_delete_dialog_message">Are you sure you want to delete the selected entity?</string>
   <string name="icon_selection_title">Select Icon</string>
 
   <string-array name="border_styles">
