--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,8 @@
   <string name="free_draw_title">Free draw</string>
   <string name="toast_switch_to_pan_text">Switch mode to Pan</string>
   <string name="default_timeplay_date_string" translatable="false">-</string>
+
+  <!--Messages search -->
   <string name="dynamic_layer_delete_dialog_title">Delete entity</string>
   <string name="dynamic_layer_delete_dialog_message">Are you sure you want to delete the selected entity?</string>
   <string name="icon_selection_title">Select Icon</string>
@@ -190,7 +192,6 @@
   <!--Messages search -->
   <string name="search">Search</string>
   <string name="search_result">%1$d of %2$d</string>
-  <string name="search">Search</string>
 
   <string-array name="border_styles">
     <item>none</item>
