--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -107,4 +107,11 @@
   <string name="icon_selection_title">בחר סמל</string>
   <string name="search">חיפוש</string>
   <string name="search_result">%1$d מתוך %2$d</string>
+  <string name="choose_date">בחר תאריך:</string>
+  <string name="choose_time_in_date">בחר שעה בתאריך:</string>
+  <string name="start_date">תאריך התחלה:</string>
+  <string name="end_date">תאריך סיום:</string>
+  <string name="timeplay_date_order_error">תאריך ההתחלה חייב להיות לפני תאריך הסיום.</string>
+  <string name="reselect_date">בחר מחדש תאריך</string>
+
 </resources>
