--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,6 +191,14 @@
   <string name="search">Search</string>
   <string name="search_result">%1$d of %2$d</string>
 
+  <!--Timeplay settings -->
+  <string name="choose_date">Choose date:</string>
+  <string name="choose_time_in_date">Choose time in that date:</string>
+  <string name="start_date">Start date</string>
+  <string name="end_date">End date</string>
+  <string name="timeplay_date_order_error">Start date must be before end date.</string>
+  <string name="reselect_date">Reselect date</string>
+
   <string-array name="border_styles">
     <item>none</item>
     <item>solid</item>
