--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -108,6 +108,9 @@
   <string name="search">חיפוש</string>
   <string name="search_result">%1$d מתוך %2$d</string>
   <string name="dynamic_layer_edit_option_details">פרטים</string>
+  <string name="dynamic_layer_details_default">בחר פריט כדי לצפות בתיאורו</string>
+  <string name="dynamic_layer_details_entity_title">יישות #%1$d</string>
+  <string name="dynamic_layer_details_layer_title">שכבה - %1$s</string>
   <string name="choose_date">בחר תאריך:</string>
   <string name="choose_time">בחר שעה בתאריך:</string>
   <string name="start_date">תאריך התחלה:</string>
