--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -111,4 +111,5 @@
   <string name="dynamic_layer_details_default">בחר פריט כדי לצפות בתיאורו</string>
   <string name="dynamic_layer_details_entity_title">יישות #%1$d</string>
   <string name="dynamic_layer_details_layer_title">שכבה - %1$s</string>
+  <string name="drawer_layers_category_name_phase_layers">שכבות שלבים</string>
 </resources>
