--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,6 +211,8 @@
   <string name="medium_speed_timeline">medium</string>
   <string name="high_speed_timeline">high</string>
   <string name="layer_description">Layer description</string>
+  <string name="edit_layer_description_alert_title">Edit Layer Description</string>
+  <string name="edit_layer_description_alert_message">Please enter the new layer descrption:</string>
 
   <string-array name="border_styles">
     <item>none</item>
