--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -125,4 +125,6 @@
   <string name="dynamic_layer_details_entity_title">יישות #%1$d</string>
   <string name="dynamic_layer_details_layer_title">שכבה - %1$s</string>
   <string name="layer_description">Layer description</string>
+  <string name="edit_layer_description_alert_title">ערוך תיאור שכבה דינאמית:</string>
+  <string name="edit_layer_description_alert_message">הקלד כאן את תיאור השכבה הדינאמית החדש:</string>
 </resources>
